# bran

./: Dockerfile  Jenkinsfile  README.md  env.example  pyproject.toml
Kubernetes/: deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
backend/backend/: settings.py  urls.py
backend/hello/: pagination.py  serializers.py  urls.py  views.py
